# Monopoly_POOII

./: README.md
MonoBase/: CMakeLists.txt  Carcel.cpp  Carcel.h  Casilla.cpp  Casilla.h  Casilla_Accion.cpp  Casilla_Accion.h  Casilla_Comprable.cpp  Casilla_Comprable.h  Casilla_Impuesto.cpp  Casilla_Impuesto.h  Casilla_Inicio.h  Casilla_Propiedad.cpp  Casilla_Propiedad.h  Casilla_Tarjeta.cpp  Casilla_Tarjeta.h  Ferrocarril.cpp  Ferrocarril.h  Juego.cpp  Juego.h  Jugador.cpp  Jugador.h  Servicios.cpp  Servicios.h  Tablero.cpp  Tablero.h  dado.cpp  main.cpp
Monopolio_SIN_GRAFICO/: accion.cpp  casilla.h  comprables.cpp  dado.cpp  juego.cpp  jugador.cpp  main.cpp  tablero.cpp
Monopolio_grafico/: Monopolio_grafico.depend  Monopolio_grafico.layout
Monopolio_grafico/include/: Juego.h  accion.h  casilla.h  comprables.h  dado.h  jugador.h
Monopolio_grafico/src/: Juego.cpp  accion.cpp  comprables.cpp  dado.cpp  jugador.cpp  tablero.cpp
POOII/: CMakeLists.txt  Casilla.h  Casilla_Inicio.cpp  Casilla_Inicio.h  Casilla_Propiedad.cpp  Casilla_Propiedad.h  Juego.cpp  Juego.h  dado.cpp
Presentar/: CMakeLists.txt  accion.cpp  accion.h  casilla.cpp  casilla.h  comprables.cpp  comprables.h  dado.cpp  juego.cpp  jugador.cpp  jugador.h  tablero.cpp  tablero.h
Proyecto/: CMakeLists.txt  accion.cpp  accion.h  casilla.cpp  casilla.h  comprables.cpp  comprables.h  dado.cpp  dado.h  juego.cpp  juego.h  jugador.cpp  jugador.h  main.cpp  tablero.cpp  tablero.h
cristian/Proyecto/: accion.cpp  accion.h  casilla.cpp  casilla.h  comprables.cpp  comprables.h  dado.cpp  juego.cpp  juego.h  (+4 more)
(+15 files in other folders)
